2011-01-27  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/SettingsManager.java: Es existieren nun
	  zwei neue Properties, die den Pfad zum Speichern von Gebührenbescheiden
	  und Probenahmeaufträgen enthalten.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die FileChooser zur Auswahl eines Speicherpfades für Gebührenbescheide und
	  Probenahmeaufträgen wurde entfernt. Diese werden nun in den Pfaden des
	  SettingsManagers gespeichert. Der konkrte Name der Datei ist dabei jeweils
	  die Kennung der Probenahme.

2011-01-27  Ingo Weinzierl <ingo@intevation.de>

	  ISSSUE1917

	* src/de/bielefeld/umweltamt/aui/module/AnalyseImport.java: Die Zeilen eines
	  Imports, die mit einem Punkt beginnen, werden ab nun ignoriert. Dies
	  betrifft im Normalfall die erste Zeile - die eine Art Titelzeile darstellt
	  - sowie die letzte Zeile - die mit 2 Punkten die Datei abschließt. Diese
	  Zeilen werden _NICHT_ als kaputte Zeilen des Imports angesehen, sondern
	  schlichtweg nicht vom Import behandelt.

2011-01-27  Ingo Weinzierl <ingo@intevation.de>

	  ISSSUE1917

	* src/de/bielefeld/umweltamt/aui/module/AnalyseImport.java: Fehlerbehandlung
	  kaputter Analyse-Zeilen verbessert: eine Zeile muss nun mindestens 9
	  komma-separierte Spalten enthalten - andernfalls wird sie ignoriert. Falls
	  kaputte Zeilen enthalten waren, wird ein Hinweis-Dialog geöffnet, um den
	  Nutzer über diese zu informieren.

2011-01-27  Ingo Weinzierl <ingo@intevation.de>

	* libs.txt: Neu. Eine Übersicht über die benutzten Bibliotheken. Aufgeführt
	  sind deren Projekt-Seiten und Lizenzen.

	* lib/groovy-all-1.7.5.txt,
	  lib/jcommon-1.0.0-pre2.txt,
	  lib/postgresql-8.3-605.jdbc3.txt,
	  lib/jasperreports-3.7.6.txt,
	  lib/jta.txt,
	  lib/concurrent-1.3.2.txt,
	  lib/freemarker.txt,
	  lib/commons-collections-2.1.1.txt,
	  lib/org.eclipse.emf.common_2.4.0.v200902171115.txt,
	  lib/org.eclipse.emf.ecore.xmi_2.4.1.v200902171115.txt,